--- a/NOTEBOOKS/simples-applications-of-recurrent-neural-networks.ipynb
+++ b/NOTEBOOKS/simples-applications-of-recurrent-neural-networks.ipynb
@@ -23,7 +23,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2021-11-18T09:00:59.748001Z",
@@ -196,7 +196,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2021-11-18T09:01:34.317280Z",
@@ -226,7 +226,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2021-11-18T09:01:39.660243Z",
@@ -397,7 +397,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2021-11-18T09:01:45.673569Z",
@@ -575,7 +575,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2021-11-16T16:00:01.732408Z",
@@ -606,7 +606,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2021-11-16T16:00:06.611342Z",
@@ -650,7 +650,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2021-11-16T16:00:08.15379Z",
@@ -717,7 +717,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2021-11-18T09:01:53.641909Z",
@@ -767,7 +767,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2021-11-18T09:02:02.139708Z",
@@ -796,7 +796,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2021-11-18T09:02:05.756247Z",
@@ -845,7 +845,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2021-11-16T16:26:14.562084Z",
@@ -887,7 +887,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2021-11-16T16:33:20.551154Z",
@@ -968,7 +968,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2021-11-16T16:39:08.654571Z",
@@ -1024,7 +1024,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2021-11-16T16:46:47.247149Z",
@@ -1060,7 +1060,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2021-11-16T16:48:49.618591Z",
@@ -1134,7 +1134,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2021-11-18T09:02:20.315987Z",
@@ -1159,7 +1159,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2021-11-18T09:03:51.782532Z",
@@ -1231,7 +1231,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2021-11-16T16:56:28.059303Z",
@@ -1300,7 +1300,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2021-11-17T13:26:36.364071Z",
@@ -1310,9 +1310,162 @@
           "shell.execute_reply.started": "2021-11-17T13:26:36.364034Z"
         },
         "trusted": true,
-        "id": "WhwPMHuNcOgm"
+        "id": "WhwPMHuNcOgm",
+        "outputId": "05acb844-d2d7-4bc4-b21e-5863072aa83e",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 206
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "\n",
+              "  <div id=\"df-7e957ef3-d4d5-4003-ac0f-ee6a9bc00b00\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Country</th>\n",
+              "      <th>City</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>69430</th>\n",
+              "      <td>it</td>\n",
+              "      <td>case terranova</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>68252</th>\n",
+              "      <td>it</td>\n",
+              "      <td>cappuccini di riano</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>76808</th>\n",
+              "      <td>it</td>\n",
+              "      <td>omignano</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>68317</th>\n",
+              "      <td>it</td>\n",
+              "      <td>carbona</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>17150</th>\n",
+              "      <td>fr</td>\n",
+              "      <td>fresnay-les-chaumes</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7e957ef3-d4d5-4003-ac0f-ee6a9bc00b00')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-7e957ef3-d4d5-4003-ac0f-ee6a9bc00b00 button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-7e957ef3-d4d5-4003-ac0f-ee6a9bc00b00');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ],
+            "text/plain": [
+              "      Country                 City\n",
+              "69430      it       case terranova\n",
+              "68252      it  cappuccini di riano\n",
+              "76808      it             omignano\n",
+              "68317      it              carbona\n",
+              "17150      fr  fresnay-les-chaumes"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ],
       "source": [
         "import pandas as pd\n",
         "file = \"https://raw.githubusercontent.com/fabnancyuhp/DEEP-LEARNING/main/DATA/citie_fr_ge_it.csv\"\n",
@@ -1340,7 +1493,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2021-11-17T13:28:05.246687Z",
@@ -1350,14 +1503,33 @@
           "shell.execute_reply.started": "2021-11-17T13:28:05.246654Z"
         },
         "trusted": true,
-        "id": "PSi_nduDcOgo"
+        "id": "PSi_nduDcOgo",
+        "outputId": "cc58de38-7152-4f9d-d528-9bfd830c7cd3",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'saintmartindebromes'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ],
       "source": [
         "import string\n",
         "letters = list(string.ascii_lowercase)\n",
         "def remove_non_lettre(ville):\n",
-        "    hh = list(ville)\n",
+        "    hh = list(str(ville))\n",
         "    hhbis = [lettre for lettre in hh if lettre in letters]\n",
         "    hhbis = \"\".join(hhbis)\n",
         "    return(hhbis)\n",
