--- a/NOTEBOOKS/CLASSIFICATION_ANNs_ON_STRUCTURED_DATA.ipynb
+++ b/NOTEBOOKS/CLASSIFICATION_ANNs_ON_STRUCTURED_DATA.ipynb
@@ -78,16 +78,22 @@
           "height": 143
         },
         "id": "lNPDlk4tOBGO",
-        "outputId": "f6428fcf-c8d3-41f1-f16c-5a359d5bae25"
+        "outputId": "897d4704-23cd-41d7-b36a-c5c73f9ae6d5"
       },
-      "execution_count": 4,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
+            "text/plain": [
+              "   SepalLengthCm  SepalWidthCm  PetalLengthCm  PetalWidthCm      Species\n",
+              "0            5.1           3.5            1.4           0.2  Iris-setosa\n",
+              "1            4.9           3.0            1.4           0.2  Iris-setosa\n",
+              "2            4.7           3.2            1.3           0.2  Iris-setosa"
+            ],
             "text/html": [
               "\n",
-              "  <div id=\"df-632aa1d2-89cd-49df-b044-6ad73b8b1efa\">\n",
+              "  <div id=\"df-e291acc7-320d-482d-9cb4-95dcee6b1f84\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -142,7 +148,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-632aa1d2-89cd-49df-b044-6ad73b8b1efa')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e291acc7-320d-482d-9cb4-95dcee6b1f84')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -193,12 +199,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-632aa1d2-89cd-49df-b044-6ad73b8b1efa button.colab-df-convert');\n",
+              "          document.querySelector('#df-e291acc7-320d-482d-9cb4-95dcee6b1f84 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-632aa1d2-89cd-49df-b044-6ad73b8b1efa');\n",
+              "          const element = document.querySelector('#df-e291acc7-320d-482d-9cb4-95dcee6b1f84');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -218,16 +224,10 @@
               "    </div>\n",
               "  </div>\n",
               "  "
-            ],
-            "text/plain": [
-              "   SepalLengthCm  SepalWidthCm  PetalLengthCm  PetalWidthCm      Species\n",
-              "0            5.1           3.5            1.4           0.2  Iris-setosa\n",
-              "1            4.9           3.0            1.4           0.2  Iris-setosa\n",
-              "2            4.7           3.2            1.3           0.2  Iris-setosa"
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 1
         }
       ]
     },
@@ -270,7 +270,7 @@
         "trusted": true,
         "id": "UuGrWU7rOBGO"
       },
-      "execution_count": 8,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -292,9 +292,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NJSFiJnQAVQH",
-        "outputId": "88f206b1-7162-4490-bd7b-d79af8236be5"
+        "outputId": "3b5a9cc7-c7b4-4d8b-ba90-3a47c44b23fc"
       },
-      "execution_count": 7,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -304,7 +304,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 3
         }
       ]
     },
@@ -340,9 +340,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wG1sIxmxOBGP",
-        "outputId": "b88e10cb-3b05-49e7-c44e-9bbbe91f7a11"
+        "outputId": "c7d7c5e5-19d0-4f26-c815-d7751de8b1d6"
       },
-      "execution_count": 11,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -352,7 +352,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 4
         }
       ]
     },
@@ -364,9 +364,9 @@
         "* tf.keras.losses.CategoricalCrossentropy\n",
         "* tf.keras.losses.SparseCategoricalCrossentropy\n",
         "\n",
-        "When we use tf.keras.losses.CategoricalCrossentropy, we’ll have to convert the target values into categorical format first – with one-hot encoding, or to_categorical in Keras.<br><br>\n",
         "\n",
-        "When we have integer targets instead of categorical vectors as targets, we can use sparse categorical crossentropy. It’s an integer-based version of the categorical crossentropy loss function, which means that we don’t have to convert the targets into categorical format anymore."
+        "\n",
+        "When we have integer targets, we can use sparse categorical crossentropy. "
       ],
       "metadata": {
         "id": "zbMwXIKTBUWH"
@@ -387,7 +387,7 @@
         "id": "Zoy-JH-iXA34",
         "outputId": "297a3c01-45fe-4b36-cbda-137d710381ee"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -416,12 +416,12 @@
       "source": [
         "from sklearn.model_selection import train_test_split\n",
         "\n",
-        "X_train, X_test, y_train, y_test = train_test_split(X.values, Y_vect_cat, test_size=0.2, random_state=42)"
+        "X_train, X_test, y_train, y_test = train_test_split(X.values, Y_encode, test_size=0.2, random_state=42)"
       ],
       "metadata": {
         "id": "1nG_ZYaWBUxz"
       },
-      "execution_count": 26,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -435,7 +435,7 @@
         "* Dense layer with 10 units and activation='relu'\n",
         "* Dense layer with 3 units and activation='softmax'\n",
         "\n",
-        "We compile our model with optimizer='adam', loss='categorical_crossentropy' and "
+        "We compile our model with optimizer='adam', loss='sparse_categorical_crossentropy' and "
       ],
       "metadata": {
         "id": "WAfO6p3CaCKe"
@@ -454,7 +454,7 @@
         "model.add(Dense(10, activation='relu'))\n",
         "model.add(Dense(3,activation='softmax'))\n",
         "\n",
-        "model.compile(optimizer='adam',loss='categorical_crossentropy',metrics=['accuracy'])"
+        "model.compile(optimizer='adam',loss='sparse_categorical_crossentropy',metrics=['accuracy'])"
       ],
       "metadata": {
         "execution": {
@@ -467,7 +467,7 @@
         "trusted": true,
         "id": "VNcvykuiOBGQ"
       },
-      "execution_count": 27,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -490,19 +490,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DuKrTrj8ddnq",
-        "outputId": "c5fdefe4-4242-4d81-f0f5-af8f68f93cdc"
+        "outputId": "f75bf3b4-0c7a-43e8-ad05-77a3bb6bb825"
       },
-      "execution_count": 28,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.callbacks.History at 0x7f2782c3f890>"
+              "<keras.callbacks.History at 0x7f9e2af8d280>"
             ]
           },
           "metadata": {},
-          "execution_count": 28
+          "execution_count": 7
         }
       ]
     },
@@ -533,26 +533,26 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fIxxP8QSOBGR",
-        "outputId": "0abd1f46-1576-4097-8f62-04b7d97acca9"
+        "outputId": "93037137-9c4c-488c-e691-7d67f802bf4e"
       },
-      "execution_count": 29,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1/1 [==============================] - 0s 21ms/step - loss: 0.0658 - accuracy: 1.0000\n"
+            "1/1 [==============================] - 0s 19ms/step - loss: 0.0668 - accuracy: 1.0000\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[0.06580964475870132, 1.0]"
+              "[0.06679394841194153, 1.0]"
             ]
           },
           "metadata": {},
-          "execution_count": 29
+          "execution_count": 8
         }
       ]
     },
@@ -569,7 +569,7 @@
     {
       "cell_type": "code",
       "source": [
-        "x_sample = X_test[8]\n",
+        "x_sample = X_test[9]\n",
         "x_sample = x_sample.reshape(1,4)\n",
         "vect_proba = model.predict(x_sample)\n",
         "vect_proba"
@@ -579,19 +579,26 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yotMVHNlgQ1g",
-        "outputId": "81f2a78d-4bc3-4ab9-a470-b54ae2fc2dbf"
+        "outputId": "278afb7a-72ff-4bbf-a72b-0561152431c9"
       },
-      "execution_count": 37,
+      "execution_count": 11,
       "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1/1 [==============================] - 0s 61ms/step\n"
+          ]
+        },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[6.1726540e-05, 7.2145969e-01, 2.7847856e-01]], dtype=float32)"
+              "array([[0.00545263, 0.9861456 , 0.00840177]], dtype=float32)"
             ]
           },
           "metadata": {},
-          "execution_count": 37
+          "execution_count": 11
         }
       ]
     },
@@ -601,7 +608,7 @@
         "import numpy as np\n",
         "pred_cat_num = np.argmax(vect_proba)\n",
         "pred_cat_label = le.inverse_transform([pred_cat_num])\n",
-        "true_cat_label = le.inverse_transform([np.argmax(y_test[8])])\n",
+        "true_cat_label = le.inverse_transform([y_test[9]])\n",
         "print(\"the predited class is: \"+str(pred_cat_label))\n",
         "print(\"the true class is: \"+str(true_cat_label))"
       ],
@@ -610,9 +617,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6jj9mGgVjkl_",
-        "outputId": "2e7ba1cf-246a-4b9f-ba05-dad8e3d19b21"
+        "outputId": "9c914d7c-e9cb-4eda-f268-8f201b8c9a0c"
       },
-      "execution_count": 43,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -621,119 +628,6 @@
             "the predited class is: ['Iris-versicolor']\n",
             "the true class is: ['Iris-versicolor']\n"
           ]
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## Building the model with spars_categorical_crossentropy loss\n",
-        "\n",
-        "The ANN we build here has the architecture of the previous except the number of units of the last layer and the loss function. We rebuild the training set and test set. Now, the target values are made from the integer numpy array Y_encode."
-      ],
-      "metadata": {
-        "id": "SzSGxyealcMB"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from sklearn.model_selection import train_test_split\n",
-        "X_train, X_test, y_train, y_test = train_test_split(X.values, Y_encode, test_size=0.2, random_state=42)\n",
-        "y_train[0:4]"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Nmfmdyf4m7If",
-        "outputId": "f4a0db55-c35c-45ec-ad39-a7d362e933e5"
-      },
-      "execution_count": 45,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([0, 0, 1, 0])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 45
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "We build the new ANN. When we use the sparse_categorical_crossentropy loss function, the last Dense layer has 3+1 units, where 3 equals the number of distinct classes in our dataset.<br>\n",
-        "We compile our new ANN with the 'sparse_categorical_crossentropy' loss function."
-      ],
-      "metadata": {
-        "id": "fl_bC-3GorJq"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from tensorflow.keras.layers import Dense, Dropout, BatchNormalization \n",
-        "from tensorflow.keras.models import Sequential\n",
-        "\n",
-        "model_new = Sequential()\n",
-        "model_new.add(Dense(10,activation='relu',input_shape=(4,)))\n",
-        "model_new.add(BatchNormalization())\n",
-        "model_new.add(Dropout(0.1))\n",
-        "model_new.add(Dense(10, activation='relu'))\n",
-        "model_new.add(Dense(4,activation='softmax'))\n",
-        "\n",
-        "model_new.compile(optimizer='adam',loss='sparse_categorical_crossentropy',metrics=['accuracy'])"
-      ],
-      "metadata": {
-        "id": "xhsvS3rPpvtR"
-      },
-      "execution_count": 51,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "We fit the new ANN with 300 epochs and evaluate it."
-      ],
-      "metadata": {
-        "id": "BK7n5Y_qqrbx"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "model.fit(X_train,y_train,epochs=300,batch_size=10,verbose=0,validation_split=0.1)\n",
-        "model.evaluate(X_test,y_test)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "oiWqsH5uqxQh",
-        "outputId": "37cedf1e-2c3c-419e-a59c-6056df299437"
-      },
-      "execution_count": 50,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "1/1 [==============================] - 0s 30ms/step - loss: 0.0453 - accuracy: 0.9667\n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[0.04528772830963135, 0.9666666388511658]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 50
         }
       ]
     },
@@ -762,7 +656,7 @@
         "id": "gmzp2w2lVkQr",
         "outputId": "77d69c15-77b5-414b-86c9-7e370547d267"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -948,7 +842,7 @@
         "id": "QBAcAIAIxfz8",
         "outputId": "b9e31704-696c-4c2c-c8ba-95ac0722330d"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -998,7 +892,7 @@
         "trusted": true,
         "id": "HNg_BaDjOBGo"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1041,7 +935,7 @@
         "id": "T-Etc-m6OBGp",
         "outputId": "926e5e37-4768-4b17-d405-704c74236ac1"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1079,7 +973,7 @@
         "id": "6e6KWsdNT1Y3",
         "outputId": "116901cd-3807-4967-d4a1-99f381d296ac"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1141,7 +1035,7 @@
         "trusted": true,
         "id": "GA7QGpuxOBGq"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1170,7 +1064,7 @@
         "trusted": true,
         "id": "T4iCl_VMOBGu"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1202,7 +1096,7 @@
         "id": "qS1cIS-pOBGv",
         "outputId": "6daeb6e1-a8e6-4c89-faa7-49cd682e893e"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1245,7 +1139,7 @@
         "id": "tHcoZAeoYtGJ",
         "outputId": "446fef1c-5730-417b-d7bf-78103c28a8f1"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1300,7 +1194,7 @@
         "id": "AW5lEEBaiHOf",
         "outputId": "39f0a276-09d6-4c63-f11e-ecb12585b3f7"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1349,7 +1243,7 @@
         "id": "eHHIncTrOBGw",
         "outputId": "48f94cdd-81e3-47d6-96db-e82d4098d910"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1581,7 +1475,7 @@
       "metadata": {
         "id": "9qqaTJVytmq9"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1602,7 +1496,7 @@
       "metadata": {
         "id": "c30cKuQCuDvt"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1622,7 +1516,7 @@
       "metadata": {
         "id": "UBGV6n9NuRM1"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1651,7 +1545,7 @@
       "metadata": {
         "id": "inp8-o0gwbf1"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1674,7 +1568,7 @@
       "metadata": {
         "id": "xAY2keyJxsms"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1694,7 +1588,7 @@
       "metadata": {
         "id": "lYVQEBIVxvq3"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1714,7 +1608,7 @@
       "metadata": {
         "id": "O2k5uPtpx-Xm"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1735,7 +1629,7 @@
       "metadata": {
         "id": "sQiu77gCyy76"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": []
     }
   ]
