--- a/NOTEBOOKS/exercice-emoji-prediction-student.ipynb
+++ b/NOTEBOOKS/exercice-emoji-prediction-student.ipynb
@@ -24,7 +24,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2021-11-21T14:36:35.010429Z",
@@ -86,7 +86,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2021-11-21T15:13:35.504320Z",
@@ -96,9 +96,150 @@
           "shell.execute_reply.started": "2021-11-21T15:13:35.504289Z"
         },
         "trusted": true,
-        "id": "UgqEoCP8a8ri"
+        "id": "UgqEoCP8a8ri",
+        "outputId": "a0671c99-2b44-4bb3-a9f9-304e338909fd",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 143
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "                                                TEXT emoji\n",
+              "0  Vacation wasted ! #vacation2017 #photobomb #ti...     😜\n",
+              "1  Merry Christmas you filthy little animals. Wea...     🎄\n",
+              "2         Happy 4th ya'll! @ Sausalito, California\\n    🇺🇸"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-510f704b-60f0-4bb7-993a-e51c0e1dd005\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>TEXT</th>\n",
+              "      <th>emoji</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Vacation wasted ! #vacation2017 #photobomb #ti...</td>\n",
+              "      <td>😜</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Merry Christmas you filthy little animals. Wea...</td>\n",
+              "      <td>🎄</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Happy 4th ya'll! @ Sausalito, California\\n</td>\n",
+              "      <td>🇺🇸</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-510f704b-60f0-4bb7-993a-e51c0e1dd005')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-510f704b-60f0-4bb7-993a-e51c0e1dd005 button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-510f704b-60f0-4bb7-993a-e51c0e1dd005');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ],
       "source": [
         "import requests, io, zipfile, pandas as pd\n",
         "import numpy as np\n",
@@ -393,7 +534,7 @@
         "id": "XBT2KIYLa8r4"
       },
       "source": [
-        "7/ Apply to_categorical to Y with num_class=3 and store the result in Y_vect. After, Split X_padd and Y_vect into a train set and a test set using train_test_split from sklearn. You have to set test_size=0.20."
+        "7/ After, Split X_pad and tweet['class'].to_numpy() into a train set and a test set using train_test_split from sklearn. You have to set test_size=0.20."
       ]
     },
     {
@@ -415,8 +556,8 @@
         "from tensorflow.keras.utils import to_categorical\n",
         "from sklearn.model_selection import train_test_split\n",
         "\n",
-        "Y_vect = \n",
-        "X_train, X_test, y_train, y_test = train_test_split(X_pad, Y_vect, test_size=0.20, random_state=42)"
+        "Y_vect = tweet['class'].to_numpy()\n",
+        "X_train, X_test, y_train, y_test = #your code here"
       ]
     },
     {
@@ -578,9 +719,7 @@
         "id": "TO9G_KrIa8r_"
       },
       "outputs": [],
-      "source": [
-        ""
-      ]
+      "source": []
     },
     {
       "cell_type": "markdown",
@@ -640,7 +779,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2021-11-21T14:56:37.200156Z",
@@ -656,6 +795,7 @@
       "source": [
         "from tensorflow.keras.layers import Dense, Conv1D, Embedding, GlobalMaxPooling1D\n",
         "from tensorflow.keras.models import Sequential\n",
+        "\n",
         "vocab_size = len(tokenizer.word_index)+1\n",
         "embedding_dim = 50\n",
         "maxlen = 10\n",
@@ -667,7 +807,7 @@
         "model_cnn.add(Dense(10, activation='relu'))\n",
         "model_cnn.add(Dense(3,activation='softmax'))\n",
         "\n",
-        "model_cnn.compile(optimizer = 'adam',loss = 'categorical_crossentropy',metrics=['acc'])\n",
+        "model_cnn.compile(optimizer = 'adam',loss = 'sparse_categorical_crossentropy',metrics=['acc'])\n",
         "\n",
         "model_cnn.fit(X_train,y_train,epochs=8,validation_split=0.1)"
       ]
