--- a/NOTEBOOKS/exercice-emoji-prediction-student.ipynb
+++ b/NOTEBOOKS/exercice-emoji-prediction-student.ipynb
@@ -24,7 +24,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2021-11-21T14:36:35.010429Z",
@@ -86,7 +86,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2021-11-21T15:13:35.504320Z",
@@ -765,7 +765,8 @@
         "id": "2Z4Th3eua8sB"
       },
       "source": [
-        "13/ **This question is not compulsory. This question is solved.** So far we have dealt with LSTM to solve NLP problems. It is possible to solve NLP tasks using a CNN (convolutional neural networks). Build a CNN with the following layers:\n",
+        "# Emoji prediction with CNN\n",
+        "**This part is not a question** So far we have dealt with LSTM to solve NLP problems. It is possible to solve NLP tasks using a CNN (convolutional neural networks). Build a CNN with the following layers:\n",
         "* an Embedding layer with output_dim=50. Output_dim is the embedding dimention. input_length argument should equal to the maxlen you used in question 6. The input is equal to the vocabulary size you finded in question 5\n",
         "* a Conv1D layer with filters=32, kernel_size=3, activation='relu'\n",
         "* a GlobalMaxPooling1D()\n",
@@ -779,7 +780,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "execution": {
           "iopub.execute_input": "2021-11-21T14:56:37.200156Z",
