--- a/NOTEBOOKS/fine-tuning-in-pytorch-with-the-trainer-api.ipynb
+++ b/NOTEBOOKS/fine-tuning-in-pytorch-with-the-trainer-api.ipynb
@@ -20,6 +20,9 @@
     "colab": {
       "provenance": [],
       "include_colab_link": true
+    },
+    "widgets": {
+      "application/vnd.jupyter.widget-state+json": {}
     }
   },
   "nbformat_minor": 0,
@@ -39,7 +42,8 @@
       "cell_type": "markdown",
       "source": [
         "# Fine-tuning in PyTorch with the Trainer API\n",
-        "This notebook is inspired by https://huggingface.co/blog/sentiment-analysis-python. **In this notebook, we deal with a PyTorch pretrained huggingface transformer.**"
+        "This notebook is inspired by https://huggingface.co/blog/sentiment-analysis-python. In this notebook, we deal with a PyTorch pretrained hugging-face transformer. More precisely, we use a distilbert transformer over the IMDB dataset.<br> \n",
+        "DistilBERT is a small, fast, cheap and light Transformer model trained by distilling BERT base. It has 40% less parameters than bert-base-uncased, runs 60% faster while preserving over 95% of BERT’s performances as measured on the GLUE language understanding benchmark."
       ],
       "metadata": {
         "id": "eDqZpo0OqFq-"
@@ -48,7 +52,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "We download the huggingface IMDB dataset:"
+        "We download the huggingface IMDB dataset. full_train_dataset and full_test_dataset are hugging-face datasets objects."
       ],
       "metadata": {
         "id": "iu3hNvtGqFrB"
@@ -57,6 +61,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#!pip install datasets\n",
         "from datasets import load_dataset\n",
         "raw_datasets = load_dataset(\"imdb\")\n",
         "\n",
@@ -65,7 +70,10 @@
         "\n",
         "import gc\n",
         "del raw_datasets\n",
-        "gc.collect()"
+        "gc.collect()\n",
+        "\n",
+        "#full_train_dataset = tokenized_datasets[\"train\"].shuffle(seed=42).select(range(5000))\n",
+        "#full_test_dataset = tokenized_datasets[\"test\"].shuffle(seed=42).select(range(3000))"
       ],
       "metadata": {
         "execution": {
@@ -76,128 +84,16 @@
           "shell.execute_reply": "2022-12-27T15:18:24.015104Z"
         },
         "trusted": true,
-        "id": "0H9ROaBOqFrC",
-        "outputId": "fd19cb96-5fd5-43a7-946f-d35d2e8bfdc3",
-        "colab": {
-          "referenced_widgets": [
-            "f6ba7550a5c4436d8d4efd57608c4728",
-            "a05d1a3ed4b54f4384a53d066d0d5e5a",
-            "0f15d352122840d9bd8dc587d3c3b230",
-            "",
-            "530e008776dd4ef1a11a6d3b0a23e7b1"
-          ]
-        }
+        "id": "0H9ROaBOqFrC"
       },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": "Downloading builder script:   0%|          | 0.00/1.79k [00:00<?, ?B/s]",
-            "application/vnd.jupyter.widget-view+json": {
-              "version_major": 2,
-              "version_minor": 0,
-              "model_id": "f6ba7550a5c4436d8d4efd57608c4728"
-            }
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": "Downloading metadata:   0%|          | 0.00/1.05k [00:00<?, ?B/s]",
-            "application/vnd.jupyter.widget-view+json": {
-              "version_major": 2,
-              "version_minor": 0,
-              "model_id": "a05d1a3ed4b54f4384a53d066d0d5e5a"
-            }
-          },
-          "metadata": {}
-        },
-        {
-          "name": "stdout",
-          "text": "Downloading and preparing dataset imdb/plain_text (download: 80.23 MiB, generated: 127.02 MiB, post-processed: Unknown size, total: 207.25 MiB) to /root/.cache/huggingface/datasets/imdb/plain_text/1.0.0/2fdd8b9bcadd6e7055e742a706876ba43f19faee861df134affd7a3f60fc38a1...\n",
-          "output_type": "stream"
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": "Downloading data:   0%|          | 0.00/84.1M [00:00<?, ?B/s]",
-            "application/vnd.jupyter.widget-view+json": {
-              "version_major": 2,
-              "version_minor": 0,
-              "model_id": "0f15d352122840d9bd8dc587d3c3b230"
-            }
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": "Generating train split:   0%|          | 0/25000 [00:00<?, ? examples/s]",
-            "application/vnd.jupyter.widget-view+json": {
-              "version_major": 2,
-              "version_minor": 0,
-              "model_id": ""
-            }
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": "Generating test split:   0%|          | 0/25000 [00:00<?, ? examples/s]",
-            "application/vnd.jupyter.widget-view+json": {
-              "version_major": 2,
-              "version_minor": 0,
-              "model_id": ""
-            }
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": "Generating unsupervised split:   0%|          | 0/50000 [00:00<?, ? examples/s]",
-            "application/vnd.jupyter.widget-view+json": {
-              "version_major": 2,
-              "version_minor": 0,
-              "model_id": ""
-            }
-          },
-          "metadata": {}
-        },
-        {
-          "name": "stdout",
-          "text": "Dataset imdb downloaded and prepared to /root/.cache/huggingface/datasets/imdb/plain_text/1.0.0/2fdd8b9bcadd6e7055e742a706876ba43f19faee861df134affd7a3f60fc38a1. Subsequent calls will reuse this data.\n",
-          "output_type": "stream"
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": "  0%|          | 0/3 [00:00<?, ?it/s]",
-            "application/vnd.jupyter.widget-view+json": {
-              "version_major": 2,
-              "version_minor": 0,
-              "model_id": "530e008776dd4ef1a11a6d3b0a23e7b1"
-            }
-          },
-          "metadata": {}
-        },
-        {
-          "execution_count": 2,
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": "75"
-          },
-          "metadata": {}
-        }
-      ]
+      "execution_count": 3,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "**We vectorize the movie reviews with a bert-case- tokenizer. Then we create the training dataset and the test dataset.**<br> In the cell , full train_dataset and full_text dataset are 2 huggingface datasets."
+        "# We vectorize the movie reviews with a distilbert-base-uncased tokenizer. Then we create the training dataset and the test dataset.\n",
+        " In the cell , full_train_dataset and full_test_dataset are 2 huggingface datasets."
       ],
       "metadata": {
         "id": "o0MOeTW6qFrC"
@@ -206,17 +102,13 @@
     {
       "cell_type": "code",
       "source": [
+        "#!pip install transformers\n",
         "from transformers import AutoTokenizer\n",
-        "#tokenizer = AutoTokenizer.from_pretrained(\"bert-base-cased\")\n",
         "tokenizer = AutoTokenizer.from_pretrained(\"distilbert-base-uncased\")\n",
         "\n",
         "def tokenize_function(examples):\n",
         "    return tokenizer(examples[\"text\"], padding=\"max_length\", truncation=True)\n",
         "\n",
-        "#tokenized_datasets = raw_datasets.map(tokenize_function, batched=True)\n",
-        "\n",
-        "#full_train_dataset = tokenized_datasets[\"train\"].shuffle(seed=42).select(range(5000))\n",
-        "#full_test_dataset = tokenized_datasets[\"test\"].shuffle(seed=42).select(range(3000))\n",
         "full_train_dataset = full_train_dataset.map(tokenize_function, batched=True)\n",
         "full_test_dataset = full_test_dataset.map(tokenize_function, batched=True)"
       ],
@@ -229,94 +121,10 @@
           "shell.execute_reply": "2022-12-27T15:18:32.014684Z"
         },
         "trusted": true,
-        "id": "LojTA12GqFrD",
-        "outputId": "f8fe9c47-39c1-4e0a-ef3d-fcda82505c06",
-        "colab": {
-          "referenced_widgets": [
-            "ee3837e44d3945a4b3d78b2ddaf11738",
-            "64442d07023a467aa87094d164efdbff",
-            "b7897eef1a9c47879f381e65e3f63b7b",
-            "7f45fe3e7f3f4193be46943560b563da",
-            "288306afa10d4567babfc74c503325aa",
-            "4b17130de4984e1ba93c7f9435ffd906"
-          ]
-        }
+        "id": "LojTA12GqFrD"
       },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": "Downloading:   0%|          | 0.00/28.0 [00:00<?, ?B/s]",
-            "application/vnd.jupyter.widget-view+json": {
-              "version_major": 2,
-              "version_minor": 0,
-              "model_id": "ee3837e44d3945a4b3d78b2ddaf11738"
-            }
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": "Downloading:   0%|          | 0.00/483 [00:00<?, ?B/s]",
-            "application/vnd.jupyter.widget-view+json": {
-              "version_major": 2,
-              "version_minor": 0,
-              "model_id": "64442d07023a467aa87094d164efdbff"
-            }
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": "Downloading:   0%|          | 0.00/226k [00:00<?, ?B/s]",
-            "application/vnd.jupyter.widget-view+json": {
-              "version_major": 2,
-              "version_minor": 0,
-              "model_id": "b7897eef1a9c47879f381e65e3f63b7b"
-            }
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": "Downloading:   0%|          | 0.00/455k [00:00<?, ?B/s]",
-            "application/vnd.jupyter.widget-view+json": {
-              "version_major": 2,
-              "version_minor": 0,
-              "model_id": "7f45fe3e7f3f4193be46943560b563da"
-            }
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": "  0%|          | 0/3 [00:00<?, ?ba/s]",
-            "application/vnd.jupyter.widget-view+json": {
-              "version_major": 2,
-              "version_minor": 0,
-              "model_id": "288306afa10d4567babfc74c503325aa"
-            }
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": "  0%|          | 0/1 [00:00<?, ?ba/s]",
-            "application/vnd.jupyter.widget-view+json": {
-              "version_major": 2,
-              "version_minor": 0,
-              "model_id": "4b17130de4984e1ba93c7f9435ffd906"
-            }
-          },
-          "metadata": {}
-        }
-      ]
+      "execution_count": 5,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -335,8 +143,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**We load the transfromer model we want to use**<br>\n",
-        "In the cell below, model is a PyTorch model."
+        "# We load the distilbert-base-uncased transfromer we want to use\n",
+        "In the cell below, model is a PyTorch hugging-face model.  "
       ],
       "metadata": {
         "id": "TC-FeIeyqFrE"
